AM_CPPFLAGS = -W -Wall -Werror -Wformat

noinst_LIBRARIES = libScore.a

libScore_a_SOURCES =				\
	Fail.cc					\
	Fail.h					\
	HarmonicMeanLog.cc			\
	HarmonicMeanLog.h			\
	HarmonicMeanSqrt.cc			\
	HarmonicMeanSqrt.h			\
	Increase.cc				\
	Increase.h				\
	LowerBound.cc				\
	LowerBound.h				\
	LowerTimesFails.cc			\
	LowerTimesFails.h			\
	TrueInFails.cc				\
	TrueInFails.h
